--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
   height: 90vh;
 
-  font-size: 2em;
+  font-size: 2.5em;
   font-family: "Trebuchet MS";
   color: darkslategrey;
 
@@ -14,15 +14,18 @@ body {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3em;
   text-align: center;
   max-width: 80%;
 }
 
-.consigne {
-  font-size: 2em;
-}
-
 p {
   color: grey;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  columns: 2;
+  list-style-type: none;
 }
